--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>I like sport</h1>
     <p>I like traveling</p>
-    <img src="C:\Users\Станислав\Desktop\Project\img\img-travel.JPG" alt="I like bugs">
-    <img src="C:\Users\Станислав\Desktop\Project\img\img-emoji.png" alt="">
+    <img src="/img/img-travel.JPG" alt="I like bugs">
+    <img src="/img/img-emoji.png" alt="I like bugs very much">
 </body>
 </html>
