--- a/Project/inner/index.html
+++ b/Project/inner/index.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My first website</title>
 </head>
+
 <body>
-    <h1>I like sport</h1>
-    <p>I like traveling</p>
-    <img src="/img/img-travel.JPG" alt="I like bugs">
-    <img src="/img/img-emoji.png" alt="I like bugs very much">
+    <div>
+        <h1>I like sport</h1>
+        <p>I like traveling</p>
+    </div>
+    <img src="/img/img-travel.JPG" alt="Абсолютный">
+    <img src="../img/img-emoji.png" alt="Относительный">
 </body>
 </html>
